@@ -7,7 +7,7 @@ use Test::Exception;
 BEGIN {
 	use_ok(
 		'Bitcoin::Crypto::Helpers',
-		qw(pad_hex ensure_length pack_varint unpack_varint)
+		qw(pad_hex ensure_length)
 	);
 }
 
@@ -30,38 +30,6 @@ subtest 'testing ensure_length' => sub {
 	dies_ok {
 		ensure_length pack('x5'), 4;
 	} 'packed data that was too long failed as expected';
-};
-
-subtest 'testing varint one byte' => sub {
-	is pack_varint(128), "\x80", 'packing ok';
-	is unpack_varint("\x80"), 128, 'unpacking ok';
-};
-
-subtest 'testing varint one byte (high)' => sub {
-	is pack_varint(255), "\xfd\xff\x00", 'packing ok';
-	is unpack_varint("\xfd\xff\x00"), 255, 'unpacking ok';
-};
-
-subtest 'testing varint two bytes' => sub {
-	is pack_varint(515), "\xfd\x03\x02", 'packing ok';
-	is unpack_varint("\xfd\x03\x02"), 515, 'unpacking ok';
-};
-
-subtest 'testing varint four bytes' => sub {
-	is pack_varint(75105), "\xfe\x61\x25\x01\x00", 'packing ok';
-	is unpack_varint("\xfe\x61\x25\x01\x00"), 75105, 'unpacking ok';
-};
-
-subtest 'testing varint eight bytes' => sub {
-	plan skip_all => 'requires 64 bit system'
-		unless Bitcoin::Crypto::Constants::is_64bit;
-
-	is pack_varint(7451076510762517), "\xff\x15\x46\x9e\xf0\xb6\x78\x1a\x00", 'packing ok';
-	is unpack_varint("\xff\x15\x46\x9e\xf0\xb6\x78\x1a\x00"), 7451076510762517, 'unpacking ok';
-};
-
-subtest 'testing unpack_varint with pos argument' => sub {
-	is unpack_varint("\x00\x00\xfe\x61\x25\x01\x00\x00", 2), 75105, 'unpacking ok';
 };
 
 done_testing;
